@@ -116,6 +116,9 @@ Lucent TNT
 .B ubnt-es-rancid
 Ubiquiti EdgeSwitches
 .TP
+.B urancid
+Ubiquiti (AirOS radios and ToughSwitches)
+.TP
 .B xrancid
 Extreme switches
 .TP
